e2e/kobold/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kobold
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kobold
                port:
                  name: http
