e2e/kobold/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/metadata.name: kobold
spec:
  finalizers:
    - kubernetes
